log
Thu 07 Sep 2023 05:29:06 PM UTC: 
 tests:  0|6
total_score: 0/70
e089429
Thu 07 Sep 2023 05:34:50 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:12: error: unused variable ‘map’ [-Werror=unused-variable]
   55 |   HashMap* map = (HashMap*)malloc(sizeof(HashMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
674ed49
Thu 07 Sep 2023 05:37:59 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:8: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   61 |     map->buckets[i]=NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5670af6
Thu 07 Sep 2023 05:39:22 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
e7a2304
Thu 07 Sep 2023 06:04:03 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:12: error: too few arguments to function ‘hash’
   43 |   long i = hash(key)%map->capacity;
      |            ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:48:15: error: array subscript is not an integer
   48 |   map->buckets[index] = newPair;
      |               ^
hashmap.c:43:8: error: unused variable ‘i’ [-Werror=unused-variable]
   43 |   long i = hash(key)%map->capacity;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
0a8885f
Thu 07 Sep 2023 06:04:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:12: error: too few arguments to function ‘hash’
   43 |   long i = hash(key)%map->capacity;
      |            ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
Compilation failed
f7d0281
Thu 07 Sep 2023 06:07:19 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   48 |   map->buckets = newPair;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
4a14840
Thu 07 Sep 2023 06:08:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
981301e
Thu 07 Sep 2023 06:08:23 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
a95f3a2
Thu 07 Sep 2023 06:09:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:15: error: array subscript is not an integer
   48 |   map->buckets[key] = newPair;
      |               ^
Compilation failed
3f4580b
Thu 07 Sep 2023 06:11:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9ed5629
Thu 07 Sep 2023 06:26:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
60197ab
Thu 07 Sep 2023 06:30:43 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:16: error: implicit declaration of function ‘next’ [-Werror=implicit-function-declaration]
   48 |   map->buckets[next(i)] = newPair;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
5a5111d
Thu 07 Sep 2023 06:31:07 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
2167e12
Thu 07 Sep 2023 06:58:47 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
2109db5
Thu 07 Sep 2023 07:00:20 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
abe81a2
Thu 07 Sep 2023 07:11:57 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f131ab9
Thu 07 Sep 2023 07:12:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
95c6f4d
Thu 07 Sep 2023 07:13:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c5be713
Thu 07 Sep 2023 07:13:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
22c6d30
Thu 07 Sep 2023 07:16:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bcd8696
Thu 07 Sep 2023 07:16:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
5ae3835
Thu 07 Sep 2023 07:21:17 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  5|4
total_score: 30/70
6a6b9e1
Thu 07 Sep 2023 07:26:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
38dc06d
Thu 07 Sep 2023 07:30:23 PM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
e6f0034
Thu 07 Sep 2023 07:36:49 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|4
total_score: 30/70
3d82789
Thu 07 Sep 2023 07:39:42 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
926c7c1
Thu 07 Sep 2023 07:41:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
72bf52b
Thu 07 Sep 2023 07:54:23 PM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:102:21: error: ‘keys’ undeclared (first use in this function); did you mean ‘key’?
  102 |   long index = hash(keys) % map->capacity;
      |                     ^~~~
      |                     key
hashmap.c:102:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:102:16: error: too few arguments to function ‘hash’
  102 |   long index = hash(keys) % map->capacity;
      |                ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
Compilation failed
b3566cf
Thu 07 Sep 2023 07:54:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:102:16: error: too few arguments to function ‘hash’
  102 |   long index = hash(key) % map->capacity;
      |                ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
Compilation failed
111128f
Thu 07 Sep 2023 07:55:33 PM UTC: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  11|2
total_score: 50/70
a7aa0ae
Thu 07 Sep 2023 07:57:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
2a932c4
Thu 07 Sep 2023 08:51:40 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
3b9ca95
Thu 07 Sep 2023 08:52:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
665f856
Thu 07 Sep 2023 08:53:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
7d0b488
Thu 07 Sep 2023 08:54:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
f8303b3
Thu 07 Sep 2023 08:56:37 PM UTC: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
c04cf13
Thu 07 Sep 2023 09:00:30 PM UTC: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  0|0
3f84911
Thu 07 Sep 2023 09:08:48 PM UTC: 
 hashmap.c | 41 +++++++++++------------------------------
 1 file changed, 11 insertions(+), 30 deletions(-)
 tests:  12|2
total_score: 50/70
935c493
Thu 07 Sep 2023 09:09:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
ad8ad7e
Thu 07 Sep 2023 09:09:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
d036248
Thu 07 Sep 2023 09:09:34 PM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  12|2
total_score: 50/70
54ce6aa
Thu 07 Sep 2023 09:12:16 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  12|2
total_score: 50/70
96aff3e
Thu 07 Sep 2023 09:14:00 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  0|0
0ded657
Thu 07 Sep 2023 09:14:48 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
a00292e
